--- a/templates/informacoes.html
+++ b/templates/informacoes.html
@@ -52,6 +52,13 @@
       padding: 1px;
     }
 
+    @media only screen and (max-width: 740px) {
+      #informacoes_gerais {
+        margin-bottom: 12px;
+        margin-top: 6px;
+      }
+    }
+    
   </style>
 
   <script>
