colocando reaload em indexes

--- a/academica/templates/academica/index_academica.html
+++ b/academica/templates/academica/index_academica.html
@@ -7,6 +7,7 @@
 
 {% block head %}
   <script>{% include "tooltip.js" %}</script>
+  {% include "reload.html" %}
   <style>
     .inside_ul {
       list-style-type:none;
