--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -8,6 +8,7 @@
 {% block head %}
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
+  {% include "reload.html" %}
   <style>
     .item_lista{
       margin-left: 8px;
