--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -5,6 +5,10 @@
   Data: 15 de Maio de 2019
 {% endcomment %}
 
+{% block head %}
+  {% include "reload.html" %}
+{% endblock %}
+
 {% block content %}
 
   <br>
