label certo para operacional

--- a/operacional/templates/operacional/edita_aviso.html
+++ b/operacional/templates/operacional/edita_aviso.html
@@ -58,7 +58,7 @@
         <label for="coordenacao">Coordenação
         <input type="checkbox" id="coordenacao" name="coordenacao" {% if aviso.coordenacao %}checked{% endif %}></label>
 
-        <label for="comite_pfe">Operacional
+        <label for="operacional">Operacional
         <input type="checkbox" id="operacional" name="operacional" {% if aviso.operacional %}checked{% endif %}></label>
   
         <label for="comite_pfe">Comitê
