melhorando todas as mensagens de login e atualização de senha

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,56 +1,69 @@
 {% extends "base.html" %}
+{% comment %}
+  Desenvolvido para o Projeto Final de Engenharia
+  Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+  Data: 1 de Stemebro de 2024
+{% endcomment %}
+
+{% block head %}
+  <style>
+    .container {max-width: 840px;}
+    .card {border-radius: 10px;}
+    .card-header {
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
+    .card-footer {
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+  </style>
+{% endblock %}
 
 {% block content %}
-
-<div id="content-main">
-<form method="post">{% csrf_token %}
-<div>
-{% if form.errors %}
-    <b><font color="red">
-        Por favor corrija os erros!
-    </font></b>
-{% endif %}
-
-<h5>Para atualizar a sua senha, digite sua senha antiga e duas vezes uma senha nova.</h5>
-
-<br>
-
-<fieldset class="module aligned wide">
-
-<div class="form-row">
-    {{ form.old_password.errors }}
-    {{ form.old_password.label_tag }}&nbsp;{{ form.old_password }}
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8 col-lg-6">
+      <div class="card shadow-sm">
+        <div class="card-header text-center bg-primary text-white">
+          <h4>Alterar Senha</h4>
+        </div>
+        <div class="card-body">
+          <form method="post">
+            {% csrf_token %}
+            {% if form.errors %}
+              <div class="alert alert-danger" role="alert">
+                <strong>Por favor corrija os erros!</strong>
+              </div>
+            {% endif %}
+            <div class="form-group mb-3">
+              <label for="id_old_password" class="form-label">Senha Antiga</label>
+              {{ form.old_password }}
+              {% if form.old_password.errors %}
+                <div class="text-danger mt-1">{{ form.old_password.errors }}</div>
+              {% endif %}
+            </div>
+            <div class="form-group mb-3">
+              <label for="id_new_password1" class="form-label">Nova Senha</label>
+              {{ form.new_password1 }}
+              {% if form.new_password1.errors %}
+                <div class="text-danger mt-1">{{ form.new_password1.errors }}</div>
+              {% endif %}
+            </div>
+            <div class="form-group mb-3">
+              <label for="id_new_password2" class="form-label">Confirme Nova Senha</label>
+              {{ form.new_password2 }}
+              {% if form.new_password2.errors %}
+                <div class="text-danger mt-1">{{ form.new_password2.errors }}</div>
+              {% endif %}
+            </div>
+            <div class="d-grid">
+              <button class="btn btn-primary mb-3" type="submit">Atualizar Senha</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-<br>
-
-<div class="form-row">
-    {{ form.new_password1.errors }}
-    {{ form.new_password1.label_tag }}&nbsp;{{ form.new_password1 }}
-</div>
-
-{% if form.new_password1.help_text %}
-<div class="help">{{ form.new_password1.help_text|safe }}</div>
-{% endif %}
-
-<br>
-
-<div class="form-row">
-{{ form.new_password2.errors }}
-    {{ form.new_password2.label_tag }}&nbsp;{{ form.new_password2 }}
-</div>
-{% if form.new_password2.help_text %}
-<div class="help">{{ form.new_password2.help_text|safe }}</div>
-{% endif %}
-
-</fieldset>
-<br>
-<div class="submit-row">
-    <input type="submit" value="Atualizar a senha" class="default">
-    <input type="submit" value="Cancelar" onclick="location.href='{% url 'index'%}'" class="default">
-</div>
-
-</div>
-</form></div>
-
 {% endblock %}
