--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,41 +1,65 @@
 {% extends "base.html" %}
+{% comment %}
+  Desenvolvido para o Projeto Final de Engenharia
+  Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+  Data: 1 de Stemebro de 2024
+{% endcomment %}
 
 {% block head %}
-    <style type="text/css">
-        table, td, th
-        {
-            border-collapse:collapse;
-            border: 0;
-        }
-    </style>
+  <style>
+    .container {max-width: 840px;}
+    .card {border-radius: 10px;}
+    .card-header {
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
+    .card-footer {
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+  </style>
 {% endblock %}
 
 {% block content %}
-    {% if validlink %}
-        <p>Digite uma nova senha e confirme.</p><br>
-        <form action="" method="post">
-        {% csrf_token %}
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">Nova senha:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirme senha:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>
-                        <input type="submit" value="atualizar senha" />
-                    </td>
-                </tr>
-            </table>
-        </form>
-    {% else %}
-        <h1>Atualização da senha falhou</h1>
-        <p>O link de redefinição de senha era inválido, possivelmente porque já foi usado. Solicite uma nova redefinição de senha.</p>
-    {% endif %}
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8 col-lg-6">
+      <div class="card shadow-sm">
+        <div class="card-header text-center bg-primary text-white">
+          <h4>Redefinição de Senha</h4>
+        </div>
+        <div class="card-body">
+          {% if validlink %}
+            <p class="card-text">Digite uma nova senha e confirme.</p>
+            <form action="" method="post">
+              {% csrf_token %}
+              <div class="form-group mb-3">
+                <label for="id_new_password1" class="form-label">Nova senha:</label>
+                {{ form.new_password1 }}
+                {% if form.new_password1.errors %}
+                  <div class="text-danger mt-1">{{ form.new_password1.errors }}</div>
+                {% endif %}
+              </div>
+              <div class="form-group mb-3">
+                <label for="id_new_password2" class="form-label">Confirme senha:</label>
+                {{ form.new_password2 }}
+                {% if form.new_password2.errors %}
+                  <div class="text-danger mt-1">{{ form.new_password2.errors }}</div>
+                {% endif %}
+              </div>
+              <div class="d-grid">
+                <button class="btn btn-primary mb-3" type="submit">Atualizar Senha</button>
+              </div>
+            </form>
+          {% else %}
+            <div class="alert alert-danger" role="alert">
+              <h5 class="alert-heading">Atualização da senha falhou</h5>
+              <p>O link de redefinição de senha era inválido, possivelmente porque já foi usado. Solicite uma nova redefinição de senha.</p>
+            </div>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
