--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -33,16 +33,20 @@
             <p class="card-text">Digite uma nova senha e confirme.</p>
             <form action="" method="post">
               {% csrf_token %}
-              <div class="form-group mb-3">
-                <label for="id_new_password1" class="form-label">Nova senha:</label>
-                {{ form.new_password1 }}
+              <div class="form-group row mb-1">
+                <label for="id_new_password1" class="col-sm-3 form-label">Nova senha:</label>
+                <div class="col-sm-9">
+                    {{ form.new_password1 }}
+                </div>
                 {% if form.new_password1.errors %}
                   <div class="text-danger mt-1">{{ form.new_password1.errors }}</div>
                 {% endif %}
               </div>
-              <div class="form-group mb-3">
-                <label for="id_new_password2" class="form-label">Confirme senha:</label>
-                {{ form.new_password2 }}
+              <div class="form-group row mb-1">
+                <label for="id_new_password2" class="col-sm-3 form-label">Confirme senha:</label>
+                <div class="col-sm-9">
+                    {{ form.new_password2 }}
+                </div>
                 {% if form.new_password2.errors %}
                   <div class="text-danger mt-1">{{ form.new_password2.errors }}</div>
                 {% endif %}
