--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -10,6 +10,25 @@
   {% load static %}
   {% include "tabelas_includes.html" %}
 
+  <style>
+    ul, ol {
+      padding-left: 0;
+      list-style-type: none;
+    }
+
+    ul li, ol li {
+      position: relative;
+      padding-left: 0.75em;
+    }
+  
+    ul li::before, ol li::before {
+      position: absolute;
+      content: '\25CF';
+      left: 0;
+    }
+  </style>
+
+
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
 
@@ -17,7 +36,17 @@
 
 {% block content %}
   {% include "impressora.html" %}
-  <span class="titulo">{{ titulo }}</span>
+  <span class="titulo">{{ titulo }}
+    {% if user.tipo_de_usuario == 4 %}
+      <small class="esconder">
+        <a
+          class="open-documento" style="cursor:pointer;"
+          data-url="{% url 'adiciona_documento' %}"
+          >&#10133;</a
+        >
+      </small>
+    {% endif %}
+  </span>
   {% include "edicoes.html" with com_cursos=True %}
   {% include "informacoes.html" %}
   <br><br>
@@ -68,7 +97,7 @@
               <!-- Estudantes -->
               <td style="min-width:18em;">
                 <small>
-                <ul class="grupo" style="padding-left: 20px;margin-bottom: 0px;">
+                <ul class="grupo">
                   {% for alocacao in projeto.alocacao_set.all %}
                     <li>
                       <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">
@@ -130,7 +159,7 @@
               <!-- Somente Banca Final, as outras não são listadas -->
               <td>
                 <small>
-                <ul class="grupo" style="padding-left: 20px;margin-bottom: 0px;">
+                <ul class="grupo">
                 {% for banca in projeto.banca_set.all %}
                   {% if banca.tipo_de_banca == 0 %}
                     {% for membro in banca.membros %}
@@ -144,45 +173,49 @@
               
               <!-- Documentos -->
               <td  style="text-align:left;min-width:18em;"><small>
-
-                <ul style="padding-left: 20px;margin-bottom: 0px;">
+                
                   {% for documento in projeto.documento_set.all %} 
                     {% if documento.confidencial %}
                       <span class="confidencial">
+                       <i style="font-size: 0.8em;" data-toggle="tooltip" data-html="true" animation="true" title="confidencial" class="fa fa-lock"></i>
+                    {% else %}
+                      <span class="publico">
+                      <i style="font-size: 0.8em;" data-toggle="tooltip" data-html="true" animation="true" title="público" class="fa fa-unlock"></i>
                     {% endif %}
+
                     {% if documento.documento and documento.link %}
-                      <li>
+                      
                         {{documento.tipo_documento}}
                         <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
                         <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
                         {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
                           <sup>(Inglês)</sup>
                         {% endif %}
-                      </li>
+                      <br>
                     {% else %}
                       {% if documento.documento %}
-                        <li>
+                        
                           <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
                           {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
                             <sup>(Inglês)</sup>
                           {% endif %}
-                        </li>
+                        <br>
                       {% endif %}
                       {% if documento.link %}
-                        <li>
+                        
                           <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
                           {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
                             <sup>(Inglês)</sup>
                           {% endif %}
-                        </li>
+                        <br>
                       {% endif %}
                     {% endif %}
                     
-                    {% if documento.confidencial %}
+                    
                       </span>
-                    {% endif %}
+                    
                   {% endfor %}
-                </ul>
+                  
 
               </small></td>
             </tr>
