sistema para coletar perguntas de estilo de comunicação

--- a/academica/templates/academica/exames_pesos.html
+++ b/academica/templates/academica/exames_pesos.html
@@ -15,6 +15,7 @@
     th {
       cursor:pointer;
       text-align: center;
+      background-color: #bee5eb;
     }
     th, td {
       padding-left: 4px;
@@ -37,7 +38,7 @@
     <div class="table-responsive">
 
     <table id="ExamesPesosTable">
-      <thead class="table-info"><tr>
+      <thead><tr>
         <th onclick="sort('#ExamesPesosTable', '.item', 'td:nth-child(1)')">Semestre</th>
         <th>Exames</th>
         <th style="display: none;">Peso</th>
