--- a/academica/templates/academica/index_academica.html
+++ b/academica/templates/academica/index_academica.html
@@ -5,86 +5,7 @@
   Data: 10 de Abril de 2023
 {% endcomment %}
 
-{% block head %}
-  <script>{% include "tooltip.js" %}</script>
-  {% include "reload.html" %}
-  <style>
-    .inside_ul {
-      list-style-type:none;
-      margin-bottom: 0.8em;
-    }
-  </style>
-{% endblock %}
-
 {% block content %}
-  <br>
-
-  <h5>Áreas de Interesse</h5>
-  <ul>
-    <li><a href="{% url 'distribuicao_areas' %}">Tendência de Áreas de Interesse (Estudantes/Propostas/Projetos)</a></li>
-  </ul>
-
-  <h5>Feedbacks das Organizações Parceiras</h5>
-  <ul>
-    <li><a href="{% url 'lista_acompanhamento' %}">Acompanhamento Intermediário</a></li>
-    <li><a href="{% url 'lista_feedback' %}">Comentários Finais</a></li>
-  </ul>
-
-  <h5>Feedbacks dos Estudantes</h5>
-  <ul>
-    <li><a data-toggle="tooltip" data-html="true" animation="true" title="Consultar coordenador para dados">Acompanhamento Externo</a></li>
-    <li><a href="{% url 'lista_feedback_estudantes' %}">Acompanhamento Final</a></li>
-  </ul>
-
-  <h5>Avaliações</h5>
-  <ul>
-    <li>Composição das Avaliações</li>
-    <li class="inside_ul">
-      <ul>
-        <a href="{% url 'objetivos_rubricas' %}"><li>Objetivos de Aprendizado e Rubricas</li></a>
-        <a href="{% url 'exames_pesos' %}"><li>Exames e Pesos</li></a>
-        <a href="{% url 'exibir_ocultar_notas' %}"><li>Exibir ou Ocultar Notas</li></a>
-
-      </ul>
-    </li>
-    
-    <li>Tabelas de Notas/Conceitos</li>
-    <li class="inside_ul">
-      <ul>
-        <a href="{% url 'estudantes_notas' %}"><li>Resultados das Avaliações dos Estudantes</li></a>
-        <a href="{% url 'estudantes_objetivos' %}"><li>Resultados dos Objetivos de Aprendizagem dos Estudantes</li></a>
-        <a href="{% url 'resultado_projetos' %}"><li>Resultados dos Projetos</li></a>
-      </ul>
-    </li>
-
-  </ul>
-
-  <h5>Análises e Evoluções</h5>
-  <ul>
-    <li>Notas e Conceitos</li>
-    <li class="inside_ul">
-      <ul>
-        <a href="{% url 'analise_notas' %}"><li>Análise por Notas/Conceitos</li></a>
-        <a href="{% url 'evolucao_notas' %}"><li>Evolução por Notas/Conceitos</li></a>
-      </ul>
-    </li>
-    
-    <li>Objetivos de Aprendizado</li>
-    <li class="inside_ul">
-      <ul>
-        <a href="{% url 'analise_objetivos' %}"><li>Análise por Objetivos de Aprendizado</li></a>
-        <a href="{% url 'evolucao_objetivos' %}"><li>Evolução nos Objetivos de Aprendizado</li></a>
-        <a href="{% url 'evolucao_por_objetivo' %}"><li>Evolução por Objetivo de Aprendizado</li></a>
-      </ul>
-    </li>
-
-    <li>Correlações</li>
-    <li class="inside_ul">
-      <ul>
-        <a href="{% url 'correlacao_medias_cr' %}"><li>Correlação entre Médias e CR</li></a>
-      </ul>
-    </li>
-
-  </ul>
-    
+<br>
+{% include "academica/academica.html" %}
 {% endblock %}
