--- a/documentos/templates/documentos/index_documentos.html
+++ b/documentos/templates/documentos/index_documentos.html
@@ -5,58 +5,7 @@
   Data: 15 de Maio de 2019
 {% endcomment %}
 
-{% block head %}
-  {% load static %}
-  {% load tipo_documento %}
-  {% comment %} Para chamar os Tooltips {% endcomment %}
-  <script>{% include "tooltip.js" %}</script>
-  {% include "reload.html" %}
-  <style>
-    ul {
-      width: fit-content;
-      margin: 0px;
-      padding-left: 1.4em;
-    }
-    @media screen and (max-width: 800px) {
-      h5 {
-        font-size: 1.1rem;
-      }
-    }
-  </style>
-{% endblock %}
-
 {% block content %}
-
-  <span class="titulo">{{ titulo }}
-    {% if user.tipo_de_usuario == 4 %}
-      <small class="esconder">
-        <a
-          class="open-documento" style="cursor:pointer;"
-          data-url="{% url 'adiciona_documento' %}"
-          >&#10133;</a
-        >
-      </small>
-    {% endif %}
-  </span>
-
-  {% for area in areas %}
-    {% if user.tipo_de_usuario in area.permissao %}
-      {% if not forloop.first %}<hr>{% endif %}
-      <h5>Área {{area.titulo}}</h5>
-      <ul>
-        {% for documento in area.documentos %}
-          {% if documento.0 == "D" %}
-            {% include "documento.html" with documento=documentos|tipo_documento:documento.1 nivel=documento.2 %}
-          {% elif documento.0 == "L" %}
-            <li><a href="{% url documento.2 %}">{{documento.1}}</a></li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-    {% endif %}
-  {% endfor %}
-
-  {% if user.tipo_de_usuario == 4 %}
-    {% include "documento-modal.html" %}
-  {% endif %}
-
+<br>
+{% include "documentos/documentos.html" %}
 {% endblock %}
