--- a/estudantes/templates/estudantes/index_estudantes.html
+++ b/estudantes/templates/estudantes/index_estudantes.html
@@ -1,3 +1,4 @@
+
 {% extends "base.html" %}
 {% comment %}
   Desenvolvido para o Projeto Final de Engenharia
@@ -5,181 +6,7 @@
   Data: 15 de Maio de 2019
 {% endcomment %}
 
-{% block head %}
-  {% include "reload.html" %}
-  <style>
-    .mensagem {
-        visibility: hidden;
-        min-width: 250px;
-        max-width: 100%;
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        border-radius: 2px;
-        padding: 12px;
-        position: fixed;
-        z-index: 1;
-        left: 50%;
-        bottom: 30px;
-        font-size: 17px;
-        transform: translate(-50%, 0);
-        -webkit-transform: translate(-50%, 0);
-        -moz-transform: translate(-50%, 0);
-        -ms-transform: translate(-50%, 0);
-        border: 4px solid #909090;
-    }
-    
-    .show {
-        visibility: visible;
-        -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-        animation: fadein 0.5s, fadeout 0.5s 2.5s;
-    }
-
-    @-webkit-keyframes fadein {
-        from {bottom: 0; opacity: 0;} 
-        to {bottom: 30px; opacity: 1;}
-    }
-    
-    @keyframes fadein {
-        from {bottom: 0; opacity: 0;}
-        to {bottom: 30px; opacity: 1;}
-    }
-    
-    @-webkit-keyframes fadeout {
-        from {bottom: 30px; opacity: 1;} 
-        to {bottom: 0; opacity: 0;}
-    }
-    
-    @keyframes fadeout {
-        from {bottom: 30px; opacity: 1;}
-        to {bottom: 0; opacity: 0;}
-    }
-  </style>
-{% endblock %}
-
 {% block content %}
-  
-  <br>
-  <h5>Pré-projeto</h5>
-  <ul>
-    <li><a href="{% url 'informacoes_adicionais' %}">Indicar Interesses e Experiências</a></li>
-    <li><a 
-      {% comment %} Caso Professor {% endcomment %}
-      {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-          {% if vencido %}
-              style="color:grey"
-          {% elif not liberadas_propostas %}
-              style="color:grey"
-          {% endif %}
-          href="{% url 'selecao_propostas' %}"
-
-      {% comment %} Caso Estudante {% endcomment %}
-      {% else %}
-          {% if vencido %}
-              class="disabled" onclick="showMessage('vencido')" 
-          {% elif not liberadas_propostas %}
-              class="disabled" onclick="showMessage('liberado')" 
-          {% else %}
-              href="{% url 'selecao_propostas' %}"
-          {% endif %}
-      {% endif %}
-      >Selecionar Propostas de Projetos</a>
-
-      {% if ano == user.aluno.anoPFE and semestre == user.aluno.semestrePFE %}
-      <div style="color: red;">
-        {% if liberadas_propostas and limite_propostas %}
-          Prazo para a seleção das propostas {{ano}}.{{semestre}}: <b>{{limite_propostas}}</b>
-        {% else %}
-          Propostas para {{ano}}.{{semestre}} ainda não liberadas, previsão de liberação: <b>{{liberacao_visualizacao}}</b>
-        {% endif %}
-        
-      </div>
-      {% endif %}
-    </li>
-  </ul>
-  <hr>
-
-  <h5>Projeto</h5>
-  <ul>
-    <li><a
-      {% comment %} Caso Organização {% endcomment %}
-      {% if user.tipo_de_usuario == 3 %}
-          class="disabled" onclick="showMessage('projeto_organizacao')"
-      {% comment %} Caso Estudante {% endcomment %}
-      {% elif user.tipo_de_usuario == 1 %}
-          {% if not projeto %} 
-              class="disabled" onclick="showMessage('projeto')"
-          {% else %}
-              href="{% url 'meuprojeto' %}"
-          {% endif %}
-      {% else %}
-        href="{% url 'meuprojeto' %}"
-      {% endif %}
-    >Meu Projeto</a></li>
-
-    {% comment %} <li><a href="{% url 'alinhamentos_gerais' %}">Alinhamentos Gerais</a></li> {% endcomment %}
-    <li><a href="{% url 'alocacao_semanal' %}">Alocação Semanal</a></li>
-  
-    <li><a {% if not projeto and user.tipo_de_usuario == 1 %} class="disabled" onclick="showMessage('projeto')" {% else %} href="{% url 'relato_quinzenal' %}" {% endif %} >
-      Relato Quinzenal
-    </a></li>
-
-    <li><a {% comment %} Submissão de Documentos {% endcomment %}
-      {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-          href="{% url 'submissao_documento' %}"
-      {% else %}
-          {% if not projeto %} 
-              class="disabled" onclick="showMessage('projeto')"
-          {% else %}
-              href="{% url 'submissao_documento' %}"
-          {% endif %}
-      {% endif %}
-    >Submissão de Documentos</a></li>
-
-    <li><a {% if not projeto %} class="disabled" onclick="showMessage('projeto')" {% else %} href="{% url 'minhas_bancas' %}" {% endif %} >
-      Informações das Bancas
-    </a></li>
-    
-    <li><a {% if not projeto and user.tipo_de_usuario == 1 %} class="disabled" onclick="showMessage('projeto')"
-            {% else %} href="{% url 'encontros_marcar' %}" {% endif %} >
-      Agendar Mentorias
-    </a></li>
-
-    <li><a {% if fora_fase_feedback_intermediario %} class="disabled" onclick="showMessage('feedback')" {% else %}
-        {% if not projeto and user.tipo_de_usuario == 1%} class="disabled" onclick="showMessage('projeto')" {% else %}
-        href="{% url 'avaliacao_pares' 'intermediaria' %}" {% endif %}{% endif %} >
-        Avaliação de Pares Intermediária
-    </a></li>
-    <li><a {% if fora_fase_feedback_final %} class="disabled" onclick="showMessage('feedback')" {% else %}
-        {% if not projeto and user.tipo_de_usuario == 1%} class="disabled" onclick="showMessage('projeto')" {% else %}
-        href="{% url 'avaliacao_pares' 'final' %}" {% endif %}{% endif %} >
-        Avaliação de Pares Final
-    </a></li>
-  
-  </ul>
-  <hr>
-
-  <h5>Pós-projeto</h5>
-  <ul>
-    <li><a {% if not fase_final %} class="disabled" onclick="showMessage('final')" {% else %} href="{% url 'estudante_feedback' %}" {% endif %} >
-      Feedback de encerramento
-    </a></li>
-  </ul>
-
-  {% comment %} <a href=" reembolso " > <h5> Pedido de Reembolso </h5> </a> {% endcomment %}
-  <div class="mensagem" id="projeto">Você não está alocado em um projeto.</div>
-  <div class="mensagem" id="vencido">Prazo para a seleção dos propostas vencido.</div>
-  <div class="mensagem" id="liberado">Propostas ainda não liberadas.</div>
-  <div class="mensagem" id="final">Você ainda não está na fase final de projeto.</div>
-  <div class="mensagem" id="feedback">Fora do período para o feedback.</div>
-  <div class="mensagem" id="projeto_organizacao">Area não acessível para organizações.</div>
-  
-  {% comment %} tipo_de_usuario == 2 é professor e tipo_de_usuario == 4 é administrador {% endcomment %}
-  <script>
-    function showMessage(mensagem) {
-      $("#"+mensagem).addClass("show");
-      setTimeout(function(){ $("#"+mensagem).removeClass("show"); }, 3000);
-    }
-  </script>
-
+<br>
+{% include "estudantes/estudantes.html" %}
 {% endblock %}
