--- a/organizacoes/templates/organizacoes/index_organizacoes.html
+++ b/organizacoes/templates/organizacoes/index_organizacoes.html
@@ -6,22 +6,6 @@
 {% endcomment %}
 
 {% block content %}
-  <br>
-  <h5>Propostas</h5>
-  <ul>
-    <li><a href="{% url 'proposta_submissao' %}">Submeter Proposta de Projeto</a></li>
-    <li><a href="{% url 'carrega_proposta' %}">Carrega Proposta de Projeto em PDF</a></li>
-    <li><a href="{% url 'parceiro_propostas' %}">Propostas Submetidas</a></li>
-  </ul>
-
-  <h5>Projetos</h5>
-  <ul>
-    <li><a href="{% url 'parceiro_projetos' %}">Lista de Projetos</a></li>
-  </ul>
-
-  <h5>Feedbacks</h5>
-  <ul>
-    <li><a href="{% url 'projeto_feedback' %}">Enviar feedback de projeto</a></li>
-  </ul>
-    
+<br>
+{% include "organizacoes/organizacoes.html" %}  
 {% endblock %}
