--- a/propostas/templates/propostas/index_propostas.html
+++ b/propostas/templates/propostas/index_propostas.html
@@ -5,21 +5,9 @@
   Data: 15 de Dezembro de 2020
 {% endcomment %}
 
-{% block head %}
-  {% include "reload.html" %}
-{% endblock %}
-
 {% block content %}
-  <span class="titulo">{{titulo}}</span>
-  <ul>
-    <a href="{% url 'estudantes_inscritos' %}"><li>Estudantes Inscritos no Semestre</li></a>
-    <a href="{% url 'organizacoes_prospect' %}"><li>Prospecção de Organizações</li></a>
-    <a href="{% url 'propostas_apresentadas' %}"><li>Propostas Apresentadas</li></a>
-    <a href="{% url 'publicar_propostas' %}"><li>Publicação das Propostas</li></a>
-    <a href="{% url 'procura_propostas' %}"><li>Procura pelas Propostas</li></a>
-    <a href="{% url 'mapeamento_estudantes_propostas' %}"><li>Mapeamento Estudantes e Propostas</li></a>
-    <a href="{% url 'montar_grupos' %}"><li>Planejamento de Grupos por Proposta</li></a>
-    <a href="{% url 'selecionar_orientadores' %}"><li>Selecionar Orientadores</li></a>
-    <a href="{% url 'fechar_conexoes' %}"><li>Selecionar Conexões com Organizações</li></a>
-  </ul>
+{% include "reload.html" %}
+<br>
+<span class="titulo">{{titulo}}</span>
+{% include "propostas/propostas.html" %}
 {% endblock %}
