--- a/projetos/templates/projetos/projetos.html
+++ b/projetos/templates/projetos/projetos.html
@@ -4,11 +4,9 @@
   Data: 15 de Dezembro de 2020
 {% endcomment %}
 
-{% include "reload.html" %}
-<h5>Projetos</h5>
-<ul>
-  <a href="{% url 'projetos_fechados' %}"><li>Listagem Geral</li></a>
-</ul>
+
+<a href="{% url 'projetos_fechados' %}"><h5>Listagem Geral</h5></a>
+<hr>
 
 <h5>Análises</h5>
 <ul>
